config-root/namespaces/jx-staging/jxquickstart2/jxquickstart2-jxquickstart2-deploy.yaml
# Source: jxquickstart2/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jxquickstart2-jxquickstart2
  labels:
    draft: draft-app
    chart: "jxquickstart2-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'jxquickstart2'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: jxquickstart2-jxquickstart2
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jxquickstart2-jxquickstart2
    spec:
      serviceAccountName: jxquickstart2-jxquickstart2
      containers:
        - name: jxquickstart2
          image: "ghcr.io/turbinefish/jxquickstart2:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
